# 6502_emulator

./: .gdbinit  API_USAGE.md  CMakeLists.txt  DEMO_EXPLANATION.md  Makefile  README.md  emulator_core.pc.in
assembler/: assembler.cpp  assembler.h  assembler_types.h  codegen.cpp  codegen.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
docs/: ARCHITECTURE.md  ASSEMBLER.md  CONTRIBUTING.md  CPU.md  DEMO_PROGRAMS.md  MEMORY.md  OPCODES.md  TESTING.md
examples/: api_example.cpp  create_test_binary.cpp
examples/external_project/: my_6502_project.cpp
include/: codegen.h  colors.h  cpu.h  cpu_state.h  demo_programs.h  emulator_api.h  include.hpp  instructions.h  memory.h  memory_mapper.h  op_codes.h  reader.h  test.h  test_utils.h  types.h
include/nes/: apu.h  cartridge.h  controller.h  nes.h  ppu.h  simplified_controller.h  simplified_ppu.h
programs/: add.asm  counter.s  demo_program.cpp  opcode_test.s  test.s
src/: cpu.cpp  emulator_api.cpp  main.cpp  memory.cpp  nes_main.cpp  op_codes.cpp  reader.cpp  test.cpp  types.cpp
src/instructions/: jmp.cpp  jsr.cpp  lda.cpp  ldx.cpp  ldy.cpp  pha.cpp  php.cpp  pla.cpp  plp.cpp  rts.cpp  sta.cpp  stx.cpp  sty.cpp  tsx.cpp  txs.cpp
src/nes/: apu.cpp  cartridge.cpp  nes.cpp  ppu.cpp  simplified_ppu.cpp
test/: CMakeLists.txt  main_test.cpp
tests/: and_test.cpp  arithmetic_test.cpp  bit_manipulation_test.cpp  branch_test.cpp  compare_test.cpp  eor_test.cpp  increment_decrement_test.cpp  index_test.cpp  invalid_opcode_test.cpp  jmp_test.cpp  jsr_test.cpp  lda_test.cpp  ldx_test.cpp  ldy_test.cpp  main.cpp  ora_test.cpp  register_transfer_test.cpp  shifts_rotates_test.cpp  sta_test.cpp  stack_operations_test.cpp  status_flag_test.cpp  stx_test.cpp  sty_test.cpp
tools/: build_external_project.sh
